Fix not visible bottom of feed

--- a/src/sass/style/platform.scss
+++ b/src/sass/style/platform.scss
@@ -34,5 +34,5 @@
 }
 
 .android-content {
-  top: 44px;
+  padding-top: 44px;
 }
