--- a/www/css/application.css
+++ b/www/css/application.css
@@ -114,7 +114,7 @@
   top: 88px !important; }
 
 .android-content {
-  top: 44px; }
+  padding-top: 44px; }
 
 .b-icon__active {
   color: #676767; }
